# scrapper-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  apply_migrations.py  main.py  pyproject.toml
.github/workflows/: keep-supabase-alive.yml  kubeletto-deploy.yml
config/: prompts.py  settings.py
config/prompts/: __init__.py  en.py  id.py
scripts/: test_auto_ban.sh
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  supabase_auth.py
src/api/routes/: __init__.py  demo.py  health.py  jobs.py  query.py  scrape.py  stream.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/api/services/: __init__.py  database.py  job_manager.py
src/api/websocket/: __init__.py  handler.py
src/enrichers/: __init__.py  company.py  contact.py  contact_finder.py  email.py  social.py
src/generators/: __init__.py  llm.py  outreach.py
src/models/: __init__.py  lead.py
src/pipeline/: __init__.py  orchestrator.py
src/processors/: __init__.py  lead_analyzer.py  scorer.py
src/scrapers/: __init__.py  serpapi_maps.py  website.py
src/search/: __init__.py  brave.py  client.py  tavily.py
src/utils/: __init__.py  logger.py  rate_limit.py
supabase/migrations/: 001_initial_schema.sql  002_add_progress_column.sql  003_demo_leads.sql  004_add_enhanced_lead_fields.sql  005_banned_users.sql  006_rate_limit_violations.sql  007_add_checkpoint_column.sql  008_query_suggestions_cache.sql  009_user_preferences.sql  010_add_language_to_jobs.sql
