[project]
name = "google-maps-lead-scraper"
version = "0.1.0"
description = "Google Maps lead generation scraper with multi-channel outreach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Scraping & HTTP
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "phonenumbers>=8.13.0",
    "email-validator>=2.1.0",
    # LLM Integration
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    # CLI & Display
    "click>=8.1.0",
    "rich>=13.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "python-jose>=3.5.0",
    "supabase>=2.27.0",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
scraper = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
